--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "_moduleAliases": {
     "@src": "dist/src",
     "@test": "dist/test",
-    "@openapi": "dist/openapi",
-    "@prisma": "dist/prisma"
+    "@openapi": "dist/openapi"
   },
   "prisma": {
     "seed": "ts-node -r tsconfig-paths/register prisma/seed/index.ts"
