--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           mask-password: 'true'
   
+      # I would like to upload with a version number as well
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -61,16 +62,36 @@ jobs:
           STACK_NAME="DynamicStack"
           aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
 
-      - name: Update Deployment
+      - name: Deploy Application to ECS
         run: |
-          CLUSTER_NAME="chatter"
-          SERVICE_NAME="api-service"
-          aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --force-new-deployment
-          aws ecs wait services-stable --cluster $CLUSTER_NAME --services $SERVICE_NAME
+          aws ecs update-service \
+            --cluster $CLUSTER_NAME \
+            --service $SERVICE_NAME \
+            --force-new-deployment
+
+      - name: Wait for Service Stability
+        run: |
+          aws ecs wait services-stable \
+            --cluster $CLUSTER_NAME \
+            --services $SERVICE_NAME
           STATUS=$(aws ecs describe-services --cluster $CLUSTER_NAME --services $SERVICE_NAME --query 'services[0].deployments[0].status' --output text)
           if [ "$STATUS" != "PRIMARY" ]; then
             echo "Deployment failed."
             exit 1
-          else
-            echo "Deployment successful."
           fi
+
+      - name: Seed database
+        run: |
+          npx prisma db seed
+    
+      - name: Run Acceptance Tests
+        env:
+          TESTING_HTTP_ENDPOINT: 'https://www.chitchatter.link'
+          TESTING_WS_ENDPOINT: 'ws://www.chitchatter.link'
+          SERVICE_ACCOUNT_USERNAME: ${{ secrets.SERVICE_ACCOUNT_USERNAME }}
+          SERVICE_ACCOUNT_PASSWORD: ${{ secrets.SERVICE_ACCOUNT_PASSWORD }}
+        run: npm run test:acceptance
+
+      - name: Update Deployment
+        run:
+          echo "Deployment successful."
