--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,35 +1,20 @@
 services:
-  database:
-    image: postgres
-    restart: always
+  chatter-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: chatter
+      - PORT=${PORT}
+      - DATABASE_URL=${DATABASE_URL}
+      - STORAGE_BUCKET_NAME=${STORAGE_BUCKET_NAME}
+      - AWS_S3_ENDPOINT=${AWS_S3_ENDPOINT}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - TOKEN_SECRET=${TOKEN_SECRET}
     ports:
-      - 5432:5432
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d chatter"]
-      interval: 10s
-      retries: 5
-      start_period: 10s
-      timeout: 5s
+      - "4000:4000"
+    networks:
+      - chatter-network
 
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
-
-  localstack:
-    image: localstack/localstack
-    ports:
-      - '127.0.0.1:4566:4566'
-    environment:
-      - SERVICES=s3
-      - DEBUG=1
-    volumes:
-      - ./localstack/scripts/ready:/etc/localstack/init/ready.d
-      - ./localstack/content:/content
-      - ./volume:/var/lib/localstack
-      - /var/run/docker.sock:/var/run/docker.sock
+networks:
+  chatter-network:
+    driver: bridge
