--- a/.env.docker
+++ b/.env.docker
@@ -10,6 +10,8 @@ AWS_S3_URL_SIGNER_ENDPOINT='http://0.0.0.0:4566'
 
 AWS_DEFAULT_REGION='us-east-1'
 
+FRONTEND_ENDPOINT='http://localhost'
+
 # JWT
 TOKEN_SECRET='+B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP'
 
