--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  chatter-api:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
@@ -11,6 +11,7 @@ services:
       - AWS_S3_URL_SIGNER_ENDPOINT=${AWS_S3_URL_SIGNER_ENDPOINT}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - TOKEN_SECRET=${TOKEN_SECRET}
+      - FRONTEND_ENDPOINT=${FRONTEND_ENDPOINT}
     ports:
       - "4000:4000"
     networks:
