--- a/docker-compose.surrounds.yaml
+++ b/docker-compose.surrounds.yaml
@@ -32,8 +32,7 @@ services:
     environment:
       - SERVICES=s3
       - DEBUG=1
-      - CORS_ENABLED=true
-      - CORS_ORIGIN=${FRONTEND_ENDPOINT}
+      - EXTRA_CORS_ALLOWED_ORIGINS=${FRONTEND_ENDPOINT}
     volumes:
       - ./localstack/scripts/ready:/etc/localstack/init/ready.d
       - ./localstack/content:/content
