--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -28,70 +28,16 @@ jobs:
           node-version: 20.12.x
           cache: npm
 
-      # run tests here!
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/gha-deployment
-          aws-region: us-east-1
+          username: bouzomgi
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Check ECR Existence
+      - name: Build Docker image
         run: |
-          STACK_NAME="CoreStack"
-          aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
+          docker build -t bouzomgi/chatter-be:latest .
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          mask-password: 'true'
-  
-      # I would like to upload with a version number as well
-      - name: Build, tag, and push docker image to Amazon ECR
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: chatter-be
-          IMAGE_TAG: "latest"
+      - name: Push Docker image
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-
-      - name: Check Deployment Existence
-        run: |
-          STACK_NAME="DynamicStack"
-          aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
-
-      - name: Deploy Application to ECS
-        run: |
-          aws ecs update-service \
-            --cluster $CLUSTER_NAME \
-            --service $SERVICE_NAME \
-            --force-new-deployment
-
-      - name: Wait for Service Stability
-        run: |
-          aws ecs wait services-stable \
-            --cluster $CLUSTER_NAME \
-            --services $SERVICE_NAME
-          STATUS=$(aws ecs describe-services --cluster $CLUSTER_NAME --services $SERVICE_NAME --query 'services[0].deployments[0].status' --output text)
-          if [ "$STATUS" != "PRIMARY" ]; then
-            echo "Deployment failed."
-            exit 1
-          fi
-
-      - name: Seed database
-        run: |
-          npx prisma db seed
-    
-      - name: Run Acceptance Tests
-        env:
-          TESTING_HTTP_ENDPOINT: 'https://www.chitchatter.link'
-          TESTING_WS_ENDPOINT: 'ws://www.chitchatter.link'
-          SERVICE_ACCOUNT_USERNAME: ${{ secrets.SERVICE_ACCOUNT_USERNAME }}
-          SERVICE_ACCOUNT_PASSWORD: ${{ secrets.SERVICE_ACCOUNT_PASSWORD }}
-        run: npm run test:acceptance
-
-      - name: Update Deployment
-        run:
-          echo "Deployment successful."
+          docker push bouzomgi/chatter-be:latest
