--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -37,8 +37,4 @@ jobs:
       - name: Build Docker image
         run: |
           docker buildx create --use
-          docker buildx build --platform linux/arm64/v8 -t bouzomgi/chatter-be:latest .
-
-      - name: Push Docker image
-        run: |
-          docker push bouzomgi/chatter-be:latest
+          docker buildx build --platform linux/arm64/v8 -t bouzomgi/chatter-be:latest --push .
